--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "any-reader",
   "description": "any-reader for vscode",
   "icon": "resources/icon.png",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "license": "MIT",
   "publisher": "aooiu",
   "qna": "https://github.com/aooiuu/any-reader-vscode/issues",
@@ -110,8 +110,7 @@
     "webpack-cli": "^4.10.0"
   },
   "dependencies": {
-    "fs-extra": "^11.1.1",
-    "got": "^12.1.0",
-    "@any-reader/core": "0.0.1-alpha.1"
+    "@any-reader/core": "0.0.1-alpha.2",
+    "fs-extra": "^11.1.1"
   }
 }
