--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "any-reader",
   "description": "any-reader for vscode",
   "icon": "resources/icon.png",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "license": "MIT",
   "publisher": "aooiu",
   "qna": "https://github.com/aooiuu/any-reader-vscode/issues",
@@ -88,10 +88,12 @@
       "view/title": [
         {
           "command": "any-reader.searchBook",
+          "when": "view == any-reader-book || view == any-reader-source",
           "group": "navigation"
         },
         {
           "command": "any-reader.editBookSource",
+          "when": "view == any-reader-book || view == any-reader-source",
           "group": "navigation"
         },
         {
@@ -130,7 +132,7 @@
     "webpack-cli": "^4.10.0"
   },
   "dependencies": {
-    "@any-reader/core": "0.0.1-alpha.4",
+    "@any-reader/core": "0.0.1-alpha.5",
     "fs-extra": "^11.1.1"
   }
 }
